--- a/project_/pages/home.html
+++ b/project_/pages/home.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="../asets/css/base.css">
     <link rel="stylesheet" href="../asets/css/header.css">
     <link rel="stylesheet" href="../asets/css/footer.css">
-    <link rel="stylesheet" href="../asets/css/main.css">
+    <link rel="stylesheet" href="../asets/css/home.css">
     <script defer src="../asets/js/main.js"></script>
 </head>
 
