--- a/project_/pages/home.html
+++ b/project_/pages/home.html
@@ -46,9 +46,9 @@
                     Hải Code Dạo ( Mr.CodeWalker )
                 </p>
                 <ol class="list">
-                    <li><a href="../pages/ranking.html">KMA RANKING</a></li>
-                    <li><a href="../pages/subject.html">SUBJECTS VIRTUAL FILTER</a></li>
-                    <li><a href="../pages/schedule.html">KMA SCHEDULE</a></li>
+                    <li><a href="/f8_offline_k8/project_/pages/ranking.html">KMA RANKING</a></li>
+                    <li><a href="/f8_offline_k8/project_/pages/subject.html">SUBJECTS VIRTUAL FILTER</a></li>
+                    <li><a href="/f8_offline_k8/project_/pages/schedule.html">KMA SCHEDULE</a></li>
                 </ol>
             </div>
         </div>
