Nộp bài tập ngày 33

--- a/học js/ngay16/ex02.html
+++ b/học js/ngay16/ex02.html
@@ -2,42 +2,46 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/ex02.css">
+    <link rel="stylesheet" href="css/ex02.css" />
 </head>
 
 <body>
-    <nav class="header">
+    <nav>
         <button data-target="#section-1">Section 1</button>
         <button data-target="#section-2">Section 2</button>
         <button data-target="#section-3">Section 3</button>
     </nav>
-    <div id="section-1">
+    <section id="section-1">
         <h2>Section 1</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non at quaerat vitae nam saepe obcaecati nulla
-            doloribus accusamus molestias harum veritatis, ipsa, deserunt possimus voluptatem, minima quam alias
-            laudantium voluptates.</p>
-    </div>
-    <div id="section-2">
-        <h2>Section 1</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non at quaerat vitae nam saepe obcaecati nulla
-            doloribus accusamus molestias harum veritatis, ipsa, deserunt possimus voluptatem, minima quam alias
-            laudantium voluptates.</p>
-    </div>
-    <div id="section-3">
-        <h2>Section 1</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non at quaerat vitae nam saepe obcaecati nulla
-            doloribus accusamus molestias harum veritatis, ipsa, deserunt possimus voluptatem, minima quam alias
-            laudantium voluptates.</p>
-    </div>
-
-
-
-
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident
+            itaque, repellendus veniam, quibusdam ut, dolorum earum repellat modi
+            doloremque dicta delectus totam ratione incidunt in alias aperiam ipsum
+            iste at!
+        </p>
+    </section>
+    <section id="section-2">
+        <h2>Section 2</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident
+            itaque, repellendus veniam, quibusdam ut, dolorum earum repellat modi
+            doloremque dicta delectus totam ratione incidunt in alias aperiam ipsum
+            iste at!
+        </p>
+    </section>
+    <section id="section-3">
+        <h2>Section 3</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident
+            itaque, repellendus veniam, quibusdam ut, dolorum earum repellat modi
+            doloremque dicta delectus totam ratione incidunt in alias aperiam ipsum
+            iste at!
+        </p>
+    </section>
     <script src="js/ex02.js"></script>
-
 </body>
 
 </html>
