--- a/project_/pages/ranking.html
+++ b/project_/pages/ranking.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KMA LEGEND</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="asets/favicon_io_/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="asets/favicon_io_/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="asets/favicon_io_/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../asets/favicon_io_/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../asets/favicon_io_/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../asets/favicon_io_/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -95,7 +95,7 @@
     <div id="footer-includes"></div>
     <!-- end footer -->
 
-
+    <!-- phần js -->
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             fetch('../includes/header.html')
