--- a/homework/Day-28/ex01.html
+++ b/homework/Day-28/ex01.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
         rel="stylesheet">
 </head>
 
@@ -22,25 +22,15 @@
         <div class="inner-head">
             <h1>Get Things Done !</h1>
             <form class="inner-form">
-                <input type="text" name="name-task" class="name-task" placeholder="What is the task today?">
+                <input type="text" name="task-name" class="task-name" placeholder="What is the task today?">
                 <button class="btn">Add Task</button>
             </form>
         </div>
         <div class="inner-list">
-            <ul class="menu">
-                <!-- <li>
-                    <div class="inner-item">
-                        <p class="inner-name">Công việc 1</p>
-                        <div class="inner-icon">
-                            <i class="fa-solid fa-pen-to-square"></i>
-                            <i class="fa-solid fa-trash"></i>
-                        </div>
-                    </div>
-                </li> -->
+            <ul class="task-menu">
             </ul>
         </div>
     </div>
-
 
     <script src="js/ex01.js"></script>
 </body>
