--- a/homework/Day31/ex01.html
+++ b/homework/Day31/ex01.html
@@ -34,49 +34,12 @@
                 <th width="10%">Thêm giỏ hàng</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Sản phẩm 1</td>
-                <td>1000</td>
-                <td>
-                    <input type="number" value="1" id="quantity_1" />
-                    <button class="btn-one" data-id="1" data-name="Sản phẩm 1" data-price="1000">Thêm vào giỏ</button>
-                </td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Sản phẩm 2</td>
-                <td>2000</td>
-                <td>
-                    <input type="number" value="1" id="quantity_2" />
-                    <button class="btn-one" data-id="2" data-name="Sản phẩm 2" data-price="2000">Thêm vào giỏ</button>
-                </td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Sản phẩm 3</td>
-                <td>3000</td>
-                <td>
-                    <input type="number" value="1" id="quantity_3" />
-                    <button class="btn-one" data-id="3" data-name="Sản phẩm 3" data-price="3000">Thêm vào giỏ</button>
-                </td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Sản phẩm 4</td>
-                <td>4000</td>
-                <td>
-                    <input type="number" value="1" id="quantity_4" />
-                    <button class="btn-one" data-id="4" data-name="Sản phẩm 4" data-price="4000">Thêm vào giỏ</button>
-                </td>
-            </tr>
+        <tbody id="product_list">
+            <!-- Sản phẩm sẽ được inner vào đây -->
         </tbody>
     </table>
     <h2>GIỎ HÀNG</h2>
-    <div class="cart">
-
-    </div>
+    <div class="cart"></div>
 
     <script src="js/ex01.js"></script>
 </body>
