--- a/homework/Day-38/ex01.html
+++ b/homework/Day-38/ex01.html
@@ -47,6 +47,9 @@
             </div>
         </div>
     </div>
+    <div class="loading">
+        <div class="spinner"></div>
+    </div>
     <script src="js/ex01.js" type="module"></script>
 </body>
 
