--- a/học js/fetch_api/ex03.html
+++ b/học js/fetch_api/ex03.html
@@ -11,6 +11,28 @@
 
 <body>
     <div class="container py-3">
+        <form class="filter-form mb-3">
+            <div class="row">
+                <div class="col-3">
+                    <select class="form-select" name="status">
+                        <option value="all">Tất cả trạng thái</option>
+                        <option value="active">Kích hoạt</option>
+                        <option value="inactive">Chưa kích hoạt</option>
+
+                    </select>
+                </div>
+                <div class="col-7">
+                    <input type="search" name="keyword" class="form-control" placeholder="Từ khóa tìm kiếm...." />
+                </div>
+                <div class="col-2 d-grid">
+                    <button type="submit" class="btn btn-primary">Tìm</button>
+                </div>
+            </div>
+        </form>
+        <div class="btn-group btn-group-sm mb-3">
+            <button class="sort-item btn btn-primary active" data-value="latest">Mới nhất</button>
+            <button class="sort-item btn btn-primary" data-value="oldest">Cũ nhất</button>
+        </div>
         <table class="table table-bordered">
             <thead>
                 <tr>
@@ -53,8 +75,8 @@
             <button type="submit" class="btn btn-primary">Lưu thay đổi</button>
         </form>
     </div>
-
-    <script src="js/ex01.js" type="module"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/ex03.js" type="module"></script>
 </body>
 
 </html>
