--- a/học js/ngay18/ex01.html
+++ b/học js/ngay18/ex01.html
@@ -8,15 +8,15 @@
 </head>
 
 <body>
-    <!-- <hello-world></hello-world> -->
+    <hello-world></hello-world>
     <!-- <h1 class="title">F8-Học lập trình không khó</h1> -->
     <!-- <div id="root"></div>
     <button class="btn">Click me</button> -->
 
-    <todo-app>
+    <!-- <todo-app>
 
 
-    </todo-app>
+    </todo-app> -->
     <!-- <div class="box">
 
     </div>
