--- a/homework/Day_39/index.html
+++ b/homework/Day_39/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Home</title>
-    <link rel="stylesheet" href="css/ex01.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -14,13 +14,19 @@
             <a href="#">Blogger</a>
         </div>
         <div class="inner-button">
-            <button class="btn btn-login">Login</button>
+            <button class="btn btn-login">
+                Login
+            </button>
         </div>
     </div>
     <div class="container">
-        <div class="inner-wrap"></div>
+        <div class="inner-wrap">
+
+        </div>
     </div>
-    <script src="js/ex01.js" type="module"></script>
+
+    <script src="js/script.js" type="module"></script>
+
 </body>
 
 </html>
