--- a/homework/Day_39/blog.html
+++ b/homework/Day_39/blog.html
@@ -4,23 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Home</title>
-    <link rel="stylesheet" href="css/ex01.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="inner-head">
         <div class="inner-logo">
-            <a href="#">Blogger</a>
+            <a href="#">View blog</a>
         </div>
         <div class="inner-button">
-            <button class="btn btn-login">Login</button>
+            <button class="btn btn-login">
+                Về trang chủ
+            </button>
         </div>
     </div>
     <div class="container">
-        <div class="inner-wrap"></div>
+        <div class="inner-wrap">
+
+        </div>
     </div>
-    <script src="js/ex01.js" type="module"></script>
+    <script src="js/blog.js" type="module"></script>
 </body>
 
 </html>
