--- a/học js/fetch_api/ex01.html
+++ b/học js/fetch_api/ex01.html
@@ -7,10 +7,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+
 </head>
 
 <body>
-    <div class="container py-3">
+    <div class="container py-3 keyword">
+        <div class="row">
+            <div class="col-3">
+                <div class="btn-group btn-sort">
+                    <button class="btn btn-primary btn-new btn-sm active " data-sort="latest">Mới nhất</button>
+                    <button class="btn btn-primary btn-old btn-sm " data-sort="oldest">Cũ nhất</button>
+                </div>
+            </div>
+            <div class="col-9">
+                <input type="search" class="form-control mb-3" placeholder="Nhập từ khóa tìm kiếm...." />
+            </div>
+        </div>
         <table class="table table-bordered">
             <thead>
                 <tr>
@@ -33,6 +45,9 @@
                 </tr> -->
             </tbody>
         </table>
+        <div class="pagination-view">
+
+        </div>
         <form action="" class="update-form">
             <h3>Thêm người dùng</h3>
             <div class="mb-3">
@@ -44,13 +59,14 @@
                 <input type="email" name="email" class="form-control" placeholder="Email..." required />
             </div>
             <div class="mb-3">
-                <label for=""> Trạng thái </label>
+                <label for="">Trạng thái </label>
                 <select name="status" class="form-select">
                     <option value="inactive">Chưa kích hoạt</option>
                     <option value="active">Kích hoạt</option>
                 </select>
             </div>
             <button type="submit" class="btn btn-primary">Lưu thay đổi</button>
+            <!-- <button class="btn btn-danger cancel">Hủy</button> -->
         </form>
     </div>
 
