--- a/học js/ngay_/ex02.html
+++ b/học js/ngay_/ex02.html
@@ -71,7 +71,7 @@
         </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="module" src="js/vd1.js"></script>
+    <script type="module" src="js/ex02.js"></script>
 </body>
 
 </html>
