--- a/homework/Day-39/ex01.html
+++ b/homework/Day-39/ex01.html
@@ -20,6 +20,9 @@
     <div class="container">
         <div class="inner-wrap"></div>
     </div>
+    <div class="loading">
+        <div class="spinner"></div>
+    </div>
     <script src="js/ex01.js" type="module"></script>
 </body>
 
