--- a/homework/Day-40/ex01.html
+++ b/homework/Day-40/ex01.html
@@ -49,6 +49,9 @@
             </div>
         </div>
     </div>
+    <div class="loading" style="display: none;">
+        <div class="spinner"></div>
+    </div>
     <script src="js/ex01.js" type="module"></script>
 </body>
 
