--- a/homework/Day-41/home.html
+++ b/homework/Day-41/home.html
@@ -41,11 +41,11 @@
             </div>
         </div>
     </div>
+    <div class="createBlogs"></div>
     <div class="footer"></div>
     <div class="loading">
         <div class="spinner"></div>
     </div>
-    <!-- <script src="js/script.js" type="module"></script> -->
     <script src="js/home.js" type="module"></script>
 </body>
 
