--- a/homework/Day_/ex01.html
+++ b/homework/Day_/ex01.html
@@ -4,55 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/ex01.css">
+    <title>Blogs</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Sono:wght@200..800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
-
-    <div class="w-50 mx-auto py-3 mt-10">
-        <form class="form-control form-login g-3">
-            <h2>Đăng Nhập</h2>
-            <div class="mb-3">
-                <label>Email</label>
-                <input type="email" name="email" class="form-control">
+    <div class="header">
+        <!-- <div class="container">
+            <div class="inner-wrap">
+                <div class="logo">
+                    <a href="#"><img src="image/photo.webp" alt="logo" /></a>
+                </div>
+                <div class="btn-from button">
+                    Login
+                </div>
             </div>
-            <div class="mb-3">
-                <label>Password</label>
-                <input type="password" name="password" class="form-control">
-            </div>
-            <div class="d-grid">
-                <button class="btn btn-primary">
-                    Đăng nhập
-                </button>
-            </div>
-        </form>
-        <form class="form-control form-register g-3">
-            <h2>Đăng Kí</h2>
-            <div class=" mb-3">
-                <label>Email</label>
-                <input type="email" name="email" class="form-control">
-            </div>
-            <div class="mb-3">
-                <label>Password</label>
-                <input type="password" name="password" class="form-control">
-            </div>
-            <div class="mb-3">
-                <label>Name</label>
-                <input type="text" name="name" class="form-control">
-            </div>
-            <div class="d-grid">
-                <button class="btn btn-primary">
-                    Đăng ký
-                </button>
-            </div>
-        </form>
-
+        </div> -->
     </div>
-
-    <script src="js/ex01.js"></script>
+    <div class="inner-blogs">
+        <div class="container">
+            <div class="inner-wrap">
+            </div>
+        </div>
+    </div>
+    <div class="footer"></div>
+    <div class="loading">
+        <div class="spinner"></div>
+    </div>
+    <script src="js/ex01.js" type="module"></script>
 </body>
 
 </html>
