--- a/homework/Day_/ex01.html
+++ b/homework/Day_/ex01.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="header">
-        <!-- <div class="container">
+        <div class="container">
             <div class="inner-wrap">
                 <div class="logo">
                     <a href="#"><img src="image/photo.webp" alt="logo" /></a>
@@ -25,7 +25,7 @@
                     Login
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
     <div class="inner-blogs">
         <div class="container">
