--- a/homework/Day_/ex01.html
+++ b/homework/Day_/ex01.html
@@ -27,6 +27,9 @@
             </div>
         </div>
     </div>
+    <div class="create-blog">
+
+    </div>
     <div class="inner-blogs">
         <div class="container">
             <div class="inner-wrap">
