--- a/homework/Day-41/form.html
+++ b/homework/Day-41/form.html
@@ -41,13 +41,14 @@
                     <form class="form-login">
                         <div class="input">
                             <label for="email-login">Email</label>
-                            <input type="email" name="email" id="email-login" placeholder="Vui lòng nhập email" />
+                            <input type="email" name="email" id="email-login" placeholder="Vui lòng nhập email"
+                                required />
 
                         </div>
                         <div class="input">
                             <label for="password-login">Password</label>
                             <input type="password" name="password" id="password-login"
-                                placeholder="Vui lòng nhập mật khẩu" />
+                                placeholder="Vui lòng nhập mật khẩu" required />
 
                         </div>
                         <div class="btn-submit">
@@ -57,17 +58,18 @@
                     <form class="form-register">
                         <div class="input">
                             <label for="email">Email</label>
-                            <input type="email" name="email" id="email" placeholder="Vui lòng nhập email" />
+                            <input type="email" name="email" id="email" placeholder="Vui lòng nhập email" required />
 
                         </div>
                         <div class="input">
                             <label for="password">Password</label>
-                            <input type="password" name="password" id="password" placeholder="Vui lòng nhập mật khẩu" />
+                            <input type="password" name="password" id="password" placeholder="Vui lòng nhập mật khẩu"
+                                required />
 
                         </div>
                         <div class="input">
                             <label for="name">Name</label>
-                            <input type="text" name="name" id="name" placeholder="Vui lòng nhập tên" />
+                            <input type="text" name="name" id="name" placeholder="Vui lòng nhập tên" required />
 
                         </div>
                         <div class="btn-submit">
