--- a/homework/Day-41/home.html
+++ b/homework/Day-41/home.html
@@ -7,6 +7,9 @@
     <title>Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
         href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Sono:wght@200..800&display=swap"
         rel="stylesheet">
@@ -35,13 +38,35 @@
             </div>
         </div>
     </div>
+    <div class="create-blog">
+        <div class="container">
+            <div class="box-form form">
+                <form class="form-create">
+                    <div class="close">
+                        <i class="fa-solid fa-xmark"></i>
+                    </div>
+                    <div class="input">
+                        <label for="title">Enter Your title</label>
+                        <input type="text" name="title" id="title" placeholder="Please enter your title" required>
+                    </div>
+                    <div class="textarea">
+                        <label for="content">Enter Your content</label>
+                        <textarea name="content" id="content" placeholder="Enter content here" required></textarea>
+                    </div>
+                    <div class="submit ">
+                        <button type="submit" class="btn-save button-two">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <div class="inner-blogs">
         <div class="container">
             <div class="inner-wrap">
             </div>
         </div>
     </div>
-    <div class="createBlogs"></div>
+
     <div class="footer"></div>
     <div class="loading">
         <div class="spinner"></div>
