--- a/homework/Day_/ex01.html
+++ b/homework/Day_/ex01.html
@@ -37,11 +37,11 @@
                 <form class="form-create">
                     <div class="input">
                         <label for="title">Enter Your title</label>
-                        <input type="text" name="title" id="title" placeholder="Please enter your title">
+                        <input type="text" name="title" id="title" placeholder="Please enter your title" required>
                     </div>
                     <div class="textarea">
                         <label for="content">Enter Your content</label>
-                        <textarea placeholder="Enter content here"></textarea>
+                        <textarea placeholder="Enter content here" required></textarea>
                     </div>
                     <div class="submit ">
                         <button type="submit" class="btn-save button-two">Save</button>
