--- a/homework/Day-41/form.html
+++ b/homework/Day-41/form.html
@@ -52,7 +52,10 @@
 
                         </div>
                         <div class="btn-submit">
-                            <button type="submit" class="btn-login button-two">Đăng nhập</button>
+                            <button type="submit" class="btn-login button-two" id="btn-login">
+                                <span class="btn-text">Đăng nhập</span>
+
+                            </button>
                         </div>
                     </form>
                     <form class="form-register">
@@ -73,7 +76,10 @@
 
                         </div>
                         <div class="btn-submit">
-                            <button type="submit" class="btn-login button-two">Đăng Kí</button>
+                            <button type="submit" class="btn-register button-two" id="btn-register">
+                                <span class="btn-text">Đăng Kí</span>
+
+                            </button>
                         </div>
                     </form>
                 </div>
