--- a/homework/Day-41/home.html
+++ b/homework/Day-41/home.html
@@ -38,10 +38,12 @@
             </div>
         </div>
     </div>
+    <div id="notification"></div>
     <div class="create-blog">
         <div class="container">
             <div class="box-form form">
                 <form class="form-create">
+                    <p class="remaining-time"></p>
                     <div class="close">
                         <i class="fa-solid fa-xmark"></i>
                     </div>
@@ -53,6 +55,10 @@
                         <label for="content">Enter Your content</label>
                         <textarea name="content" id="content" placeholder="Enter content here" required></textarea>
                     </div>
+                    <div class="date">
+                        <label for="datePicker">Set Time To Post :</label>
+                        <input type="date" name="date" id="datePicker" class="datePicker">
+                    </div>
                     <div class="submit ">
                         <button type="submit" class="btn-save button-two">Save</button>
                     </div>
@@ -60,6 +66,8 @@
             </div>
         </div>
     </div>
+
+
     <div class="inner-blogs">
         <div class="container">
             <div class="inner-wrap">
