Nộp bài tập ngày 45

--- a/homework/Day-41/page-user.html
+++ b/homework/Day-41/page-user.html
@@ -49,6 +49,7 @@
     <div class="loading">
         <div class="spinner"></div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.10/purify.min.js"></script>
     <script src="js/user.js" type="module"></script>
 </body>
 
