--- a/homework/Day-41/home.html
+++ b/homework/Day-41/home.html
@@ -79,6 +79,7 @@
     <div class="loading">
         <div class="spinner"></div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.10/purify.min.js"></script>
     <script src="js/home.js" type="module"></script>
 </body>
 
