--- a/homework/Day-41/index.html
+++ b/homework/Day-41/index.html
@@ -37,6 +37,7 @@
     <div class="loading">
         <div class="spinner"></div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.3.10/purify.min.js"></script>
     <script src="js/script.js" type="module"></script>
 </body>
 
